--- a/MvcTpv/appsettings.json
+++ b/MvcTpv/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //Production
     //Data Source=SQL5036.myWindowsHosting.com;Initial Catalog=DB_9DFAB7_mvctpv;User Id=DB_9DFAB7_mvctpv_admin;Password=YOUR_DB_PASSWORD;
-    //"MvcTpvConnection": "Data Source=SQL5036.myWindowsHosting.com;Initial Catalog=DB_9DFAB7_mvctpv;User Id=DB_9DFAB7_mvctpv_admin;Password=M1laGr0S;"
+    //"MvcTpvConnection": "Data Source=SQL5036.myWindowsHosting.com;Initial Catalog=DB_9DFAB7_mvctpv;User Id=DB_9DFAB7_mvctpv_admin;Password=YOUR_DB_PASSWORD;"
     
     //Debug
     "MvcTpvConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcTpv18;Trusted_Connection=True;MultipleActiveResultSets=true"
